examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/lamda_reconstruct.st
language core;

extend with #type-reconstruction;

fn main(n : Nat) -> Bool {
    return (fn(i : auto) { return i })(n)
}

//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
